fix: playwright github action ci test

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build --outDir dist --base './'"
+    "build": "vite build --outDir dist --base './'",
+    "test": "playwright test",
+    "preview": "vite preview"
   },
   "keywords": [],
   "description": "",
