--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,7 +14,9 @@ jobs:
         with:
           node-version: lts/*
       - name: Create .env file
-        run: echo "VITE_GOOGLE_MAPS_API_KEY=${{secrets.GOOGLE_MAPS_KEY}}" >> .env
+        run: |
+          echo "VITE_GOOGLE_MAPS_API_KEY=${{secrets.GOOGLE_MAPS_KEY}}" >> .env
+          echo "VITE_GMAPS_VERSION=3.58" >> .env
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
