--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,6 +17,14 @@ jobs:
         run: |
           echo "VITE_GOOGLE_MAPS_API_KEY=${{secrets.GOOGLE_MAPS_KEY}}" >> .env
           echo "VITE_GMAPS_VERSION=3.58" >> .env
+      - uses: actions/cache@v4
+        id: npm-cache
+        with:
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install dependencies
         run: npm ci
       - name: Install Playwright Browsers
