--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,9 +17,10 @@ jobs:
         run: |
           echo "VITE_GOOGLE_MAPS_API_KEY=${{secrets.GOOGLE_MAPS_KEY}}" >> .env
           echo "VITE_GMAPS_VERSION=3.58" >> .env
+
       - name: Determine cache directory
         id: npm-cache-dir
-        run: echo "dir=$(npm config get cache)" >> $GITHUB_ENV
+        run: echo "dir=$(npm config get cache)" >> "$GITHUB_ENV"
 
       - uses: actions/cache@v4
         id: npm-cache
